[package]
name = "pong"
version = "0.1.0"
authors = ["coufal <coufalja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15"
[features]
default = ["vulkan"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]